--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Avonasandratra</title>
-    <script type="module" crossorigin src="/assets/index.85ae9348.js"></script>
-    <link rel="stylesheet" href="/assets/index.c9a3b22f.css">
+    <script type="module" crossorigin src="./assets/index.85ae9348.js"></script>
+    <link rel="stylesheet" href="./assets/index.c9a3b22f.css">
   </head>
   <body>
     <div id="app"></div>
